alot of improvements and changes... to many to describe
